mise en forme de la page principale et ajout des éléments

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <body>
         <div>
             <header>
-                <h1 class="text-logo"><img src="" alt="logo"/>Hellocse Test</h1>
+                <div class="text-logo"><img id="logo" src="https://www.hellocse.fr/images/logo_hellocse_white.svg" alt="logo" /><h1>Hellocse Test</h1></div>
                 <!-- menu -->
                 <nav class="menu-container">
                     <ul class="menu">
                         <li role="home" class="active"><a href="index.html">Home</a></li>
-                        <li role="back"><a href="login.php">BackOffice</a></li>
+                        <li role="back"><a href="login.php">Login</a></li>
                     </ul>
                 </nav>
             </header>
@@ -26,19 +26,19 @@
             <div class="container site">
                 <div class="tab-content">
                     <a href="#item1">Angelina Jolie</a>
-                    <div id="item1">... item 1...</div>
+                    <div class="items" id="item1"><div><img class="" src=""><span>Angelina Jolie</span></div><p>mon text ici</p></div>
                 </div>
                 <div class="tab-content">
                     <a href="#item2" >Megan Fox</a>
-                    <div id="item2">... item 2...</div>
+                    <div class="items" id="item2">... item 2...</div>
                 </div>
                 <div class="tab-content">
                     <a href="#item3" >Leonardo Di Caprio</a>
-                    <div id="item3">... item 3...</div>
+                    <div class="items" id="item3">... item 3...</div>
                 </div>
                 <div class="tab-content">
                     <a href="#default">clear</a>
-                    <div id="default"></div>
+                    <div class="items" id="default"></div>
                 </div>
             </div>
         </div>
