--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="globalStyle.css">
         <!--tailwind
         <script src="https://cdn.tailwindcss.com"></script>
         -->
@@ -18,7 +19,7 @@
                 <nav class="menu-container">
                     <ul class="menu">
                         <li role="home" class="active"><a href="index.html">Home</a></li>
-                        <li role="back"><a href="login.php">Admin</a></li>
+                        <li role="back"><a href="admin/index.php">Admin</a></li>
                     </ul>
                 </nav>
             </header>
